--- a/carrinho.html
+++ b/carrinho.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/carrinho.css">
-    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="./css/carrinho.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <title>Mirror Fashion</title>
 </head>
 <body>
     <header>
         <div class="logo">Mirror Fashion</div>
-        <button class="back"><a href="/index.html">&larr;</a></button>
+        <button class="back"><a href="./index.html">&larr;</a></button>
     </header>
     
         <main>
@@ -31,7 +31,7 @@
                 <tr>
                 <td>
                     <div class="product">
-                    <img src="/assets/produtos/miniatura1.png">
+                    <img src="./assets/produtos/miniatura1.png">
                     <div class="name">Camisa florida</div>
                     </div>
                 </td>
